Implemented use case for klm

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 server.port=9000
+server.servlet.context-path=/travel
+
+# Actuator Configuration
+management.server.port=8001
+management.server.address=127.0.0.1
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=env,beans
+management.endpoints.web.cors.allowed-origins=https://localhost:8080
+management.endpoints.web.cors.allowed-methods=GET,POST
+
+# AppConfig properties
+travel.serviceApiUrl=http://localhost:8080
+travel.actuatorUrl=http://localhost:8001
+
+# Simple Travel API Mock Credentials
+userName= user
+password= secret123
